; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_rpmhpd.c_to_active_sleep.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_rpmhpd.c_to_active_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpmhpd = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpmhpd*, i32, i32*, i32*)* @to_active_sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @to_active_sleep(%struct.rpmhpd* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.rpmhpd*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store %struct.rpmhpd* %0, %struct.rpmhpd** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i32*, i32** %7, align 8
  store i32 %9, i32* %10, align 4
  %11 = load %struct.rpmhpd*, %struct.rpmhpd** %5, align 8
  %12 = getelementptr inbounds %struct.rpmhpd, %struct.rpmhpd* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i32*, i32** %8, align 8
  store i32 0, i32* %16, align 4
  br label %21

17:                                               ; preds = %4
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %8, align 8
  store i32 %19, i32* %20, align 4
  br label %21

21:                                               ; preds = %17, %15
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
